# cppyy-backend

./: .gitignore  BUILD.bazel  MODULE.bazel  README.rst
.github/workflows/: bazel.yml
clingwrapper/src/: clingwrapper.cxx
python/cppyy_backend/: _cling_config.py  loader.py
